# quran-audio-recognizer

./: .gitignore  README.md
backend/: .env.example  README.md  fly.toml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: quran.py  recognize.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: errors.py  quran.py  recognize.py
backend/app/services/: matcher.py  quran_loader.py  recognize_pipeline.py  transcription.py
backend/app/tests/: test_matcher.py  test_normalization.py
backend/app/utils/: arabic_text.py
backend/quran_audio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/bookmarks/: page.tsx
frontend/src/app/surah/[id]/: page.tsx
frontend/src/app/surahs/: page.tsx
frontend/src/components/: ErrorBanner.tsx  HoldToRecordButton.tsx  HomeClient.tsx  LoadingOverlay.tsx  MicFab.tsx  StickyHeader.tsx  SurahListItem.tsx  SurahNav.tsx  SurahReaderClient.tsx  Verse.tsx
frontend/src/hooks/: useAudioRecorder.ts  useBookmarks.ts  useChunkedRecorder.ts  useHighlightVerse.ts
frontend/src/lib/: arabic.ts  config.ts  juz.ts  verse-meaning.ts  verse-text.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/audio/: process.ts  wavEncoder.ts
